<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscadorFragment"
    android:padding="25dp"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:hint="@string/hint"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:id="@+id/text_message"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_buscar"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:text="@string/search"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/claqueta"
        app:layout_collapseMode="parallax"/>

</LinearLayout>