<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BuscadorFragment"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/concepto"
            android:id="@+id/id_concepto" />



            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:id="@+id/id_definicion"
            android:text="@string/definicion"
            android:inputType="textMultiLine"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"/>


            <Button
                android:id="@+id/btn_inicio_buscador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/search2"
                android:textSize="18sp" />

    </LinearLayout>

</ScrollView>