<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/game"
                android:id="@+id/dictionaryTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:id="@+id/id_xogo"
                android:text="@string/DescGame"/>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:id="@+id/chipgroup"
                app:singleSelection="true">

            <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chipCon1"
                    android:text="Concepto1"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon2"
                    android:text="Concepto2"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon3"
                    android:text="Concepto3"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon4"
                    android:text="Concepto4"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon5"
                    android:text="Concepto5"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon6"
                    android:text="Concepto6"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon7"
                    android:text="Concepto7"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon8"
                    android:text="Concepto8"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon9"
                    android:text="Concepto9"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/chipCon10"
                    android:text="Concepto10"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:id="@+id/id_definicion"
                android:text="@string/definicion"
                android:inputType="textMultiLine"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_probar"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:text="@string/tryGame"/>

        </LinearLayout>
</ScrollView>
